<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.magnumgeek.examenuniversidad.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewEstudia"
        android:layout_marginBottom="@dimen/margen_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="@dimen/icon_ancho"
                android:layout_height="@dimen/icono_alto" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margen_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estudia" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/estudia_descripcion"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewPractica"
        android:layout_marginBottom="@dimen/margen_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="@dimen/icon_ancho"
                android:layout_height="@dimen/icono_alto" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margen_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practica" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practica_descripcion"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewExamen"
        android:layout_marginBottom="@dimen/margen_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="@dimen/icon_ancho"
                android:layout_height="@dimen/icono_alto" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margen_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/examen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/examen_descripcion"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardviewMultiplayer"
        android:layout_marginBottom="@dimen/margen_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_launcher_background"
                android:layout_width="@dimen/icon_ancho"
                android:layout_height="@dimen/icono_alto" />

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/margen_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplayer" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/multiplayer_description"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
